<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvRepositoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:text="@string/repository_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/mcvImage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRepositoryDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:maxLines="3"
            android:text="@string/description"
            android:textSize="11sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
            app:layout_constraintEnd_toStartOf="@id/mcvImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRepositoryTitle"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivRepository"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_launcher_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvUsernameRepository"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transparence"
                    android:maxLines="1"
                    android:padding="4dp"
                    android:text="@string/username"
                    android:textAlignment="center"
                    android:textColor="@color/orange"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/ivRepository"
                    app:layout_constraintEnd_toEndOf="@id/ivRepository"
                    app:layout_constraintStart_toStartOf="@id/ivRepository"
                    app:layout_constraintTop_toTopOf="@id/ivRepository"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mcvImage"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/tvForkRepository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:gravity="start|center"
                android:padding="4dp"
                android:text="@string/fork"
                android:textAlignment="gravity"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                android:textStyle="italic"
                app:drawableStartCompat="@drawable/ic_baseline_developer_mode_24"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tvStarsRepository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:layout_gravity="start|center"
                android:fontFamily="sans-serif-black"
                android:gravity="start|center"
                android:padding="4dp"
                android:text="@string/stars"
                android:textAlignment="gravity"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                android:textStyle="italic"
                app:drawableStartCompat="@drawable/ic_baseline_star_border_24" />

            <TextView
                android:id="@+id/tvViewsRepositoryWatchers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:gravity="start|center"
                android:padding="4dp"
                android:text="@string/watchers"
                android:textAlignment="gravity"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                android:textStyle="italic"
                app:drawableStartCompat="@drawable/ic_baseline_visibility_24" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>